# satellite_drivers

./: .gitignore
plotter/: TODO.md  command_parser.cpp  command_parser.h  config.h  plotter.ino  types.h
satelite/: direct_get_image.py  download_images.py  earthview.py  pyproject.toml  rgb_model.ipynb  simple_download.py
satelite/.ipynb_checkpoints/: rgb_model-checkpoint.ipynb
